--- a/index-p1.html
+++ b/index-p1.html
@@ -103,27 +103,27 @@
 				<div class="slides" id="slides">						
 					<div class="slide x">
 						<div class="checkIcon"><img id="check-1" src="Assets/Fonts/check.png" alt="" ></div>
-						<img id="phaseOne1" src="Assets/Phase1/1.png" alt="" >
+						<img class="imgHover" id="phaseOne1" src="Assets/Phase1/1.png" alt="" >
 					</div>
 					<div class="slide x">
 						<div class="checkIcon"><img id="check-2" src="Assets/Fonts/check.png" alt="" ></div>
-						<img id="phaseOne2" src="Assets/Phase1/2.png" alt="">
+						<img class="imgHover" id="phaseOne2" src="Assets/Phase1/2.png" alt="">
 					</div>				
 					<div class="slide x">
 						<div class="checkIcon"><img id="check-3" src="Assets/Fonts/check.png" alt="" ></div>
-						<img id="phaseOne3" src="Assets/Phase1/4.png" alt="">
+						<img class="imgHover" id="phaseOne3" src="Assets/Phase1/4.png" alt="">
 					</div>
 					<div class="slide x">
 						<div class="checkIcon"><img id="check-4" src="Assets/Fonts/check.png" alt="" ></div>
-						<img id="phaseOne4" src="Assets/Phase1/5.png" alt="">
+						<img class="imgHover" id="phaseOne4" src="Assets/Phase1/5.png" alt="">
 					</div>
 					<div class="slide x">
 						<div class="checkIcon"><img id="check-5" src="Assets/Fonts/check.png" alt="" ></div>
-						<img id="phaseOne5" src="Assets/Phase1/6.png" alt="">
+						<img class="imgHover" id="phaseOne5" src="Assets/Phase1/6.png" alt="">
 					</div>
 					<div class="slide x">
 						<div class="checkIcon"><img id="check-6" src="Assets/Fonts/check.png" alt="" ></div>
-						<img id="phaseOne6" src="Assets/Phase1/3.png" alt="">
+						<img class="imgHover" id="phaseOne6" src="Assets/Phase1/3.png" alt="">
 					</div>			
 				</div>		
 
@@ -163,8 +163,8 @@
 
 			<!--navigation button start-->
 			<div class="navigationBtn">
-				<a href="index.html" class="button">BACK</a>
-				<a href="index-p2.html" class="button main">NEXT</a>
+				<a href="index.html" class="button BGSlide">BACK</a>
+				<a href="index-p2.html" class="button BGSlide">NEXT</a>
 			</div>
 			<!--navigation button end-->
 
