--- a/index-p2.html
+++ b/index-p2.html
@@ -107,37 +107,37 @@
 				<div class="slides" id="slides">						
 					<div class="slide x">
 						<div class="checkIcon"><img id="check1" src="Assets/Fonts/check.png" alt="" ></div>
-						<img id="phaseOne1" src="Assets/Phase2/1.png" alt="" >
+						<img class="imgHover" id="phaseOne1" src="Assets/Phase2/1.png" alt="" >
 					</div>
 					<div class="slide x">
 						<div class="checkIcon"><img id="check2" src="Assets/Fonts/check.png" alt="" ></div>
-						<img id="phaseOne2" src="Assets/Phase2/2.png" alt="">
+						<img class="imgHover" id="phaseOne2" src="Assets/Phase2/2.png" alt="">
 					</div>				
 					<div class="slide x">
 						<div class="checkIcon"><img id="check3" src="Assets/Fonts/check.png" alt="" ></div>
-						<img id="phaseOne3" src="Assets/Phase2/4.png" alt="">
+						<img class="imgHover" id="phaseOne3" src="Assets/Phase2/4.png" alt="">
 					</div>
 					<div class="slide x">
 						<div class="checkIcon"><img id="check4" src="Assets/Fonts/check.png" alt="" ></div>
-						<img id="phaseOne4" src="Assets/Phase2/5.png" alt="">
+						<img class="imgHover" id="phaseOne4" src="Assets/Phase2/5.png" alt="">
 					</div>
 					<div class="slide x">
 						<div class="checkIcon"><img id="check5" src="Assets/Fonts/check.png" alt="" ></div>
-						<img id="phaseOne5" src="Assets/Phase2/6.png" alt="">
+						<img class="imgHover" id="phaseOne5" src="Assets/Phase2/6.png" alt="">
 					</div>
 					<div class="slide x">
 						<div class="checkIcon"><img id="check6" src="Assets/Fonts/check.png" alt="" ></div>
-						<img id="phaseOne6" src="Assets/Phase2/3.png" alt="">
+						<img class="imgHover" id="phaseOne6" src="Assets/Phase2/3.png" alt="">
 					</div>	
 					<div class="slide x">
 						<div class="checkIcon"><img id="check7" src="Assets/Fonts/check.png" alt="" ></div>
-						<img id="phaseOne7" src="Assets/Phase2/7.png" alt="">
+						<img class="imgHover" id="phaseOne7" src="Assets/Phase2/7.png" alt="">
 					</div>			
 				</div>		
 
 				<div class="rangeSlider">
 					<div class="rangeSlider width">
-						<input type="range" id="slider" value="-55" min="-110" max="0" step="-1" />
+						<input type="range" id="slider" value="-57.5" min="-115" max="0" step="-1" />
 
 						<div id="selector">
 							<div class="selectBtn"></div>
@@ -171,8 +171,8 @@
 
 			<!--navigation button start-->
 			<div class="navigationBtn">
-				<a href="index-p1.html" class="button">BACK</a>
-				<a href="index-p3.html" class="button main">NEXT</a>
+				<a href="index-p1.html" class="button BGSlide">BACK</a>
+				<a href="index-p3.html" class="button BGSlide">NEXT</a>
 			</div>
 			<!--navigation button end-->
 
