--- a/index-p3.html
+++ b/index-p3.html
@@ -48,27 +48,27 @@
 				<div class="slides" id="slides">						
 					<div class="slide x">
 						<div class="checkIcon"><img id="check1" src="Assets/Fonts/check.png" alt="" ></div>
-						<img id="phaseOne1" src="Assets/Phase3/1.png" alt="" >
+						<img class="imgHover" id="phaseOne1" src="Assets/Phase3/1.png" alt="" >
 					</div>
 					<div class="slide x">
 						<div class="checkIcon"><img id="check2" src="Assets/Fonts/check.png" alt="" ></div>
-						<img src="Assets/Phase3/2.png" alt="">
+						<img class="imgHover" src="Assets/Phase3/2.png" alt="">
 					</div>				
 					<div class="slide x">
 						<div class="checkIcon"><img id="check3" src="Assets/Fonts/check.png" alt="" ></div>
-						<img src="Assets/Phase3/4.png" alt="">
+						<img class="imgHover" src="Assets/Phase3/4.png" alt="">
 					</div>
 					<div class="slide x">
 						<div class="checkIcon"><img src="Assets/Fonts/check.png" alt="" ></div>
-						<img src="Assets/Phase3/5.png" alt="">
+						<img class="imgHover" src="Assets/Phase3/5.png" alt="">
 					</div>
 					<div class="slide x">
 						<div class="checkIcon"><img src="Assets/Fonts/check.png" alt="" ></div>
-						<img src="Assets/Phase3/6.png" alt="">
+						<img class="imgHover" src="Assets/Phase3/6.png" alt="">
 					</div>
 					<div class="slide x">
 						<div class="checkIcon"><img src="Assets/Fonts/check.png" alt="" ></div>
-						<img src="Assets/Phase3/3.png" alt="">
+						<img class="imgHover" src="Assets/Phase3/3.png" alt="">
 					</div>			
 				</div>		
 
@@ -108,8 +108,8 @@
 
 			<!--navigation button start-->
 			<div class="navigationBtn">
-				<a href="index-p2.html" class="button">BACK</a>
-				<a href="index-p4.html" class="button main" id="comfirmBtn">CONFIGURE</a>
+				<a href="index-p2.html" class="button BGSlide">BACK</a>
+				<a href="index-p4.html" class="button BGSlide" id="comfirmBtn">CONFIGURE</a>
 			</div>
 			<!--navigation button end-->
 
