--- a/index-p4.html
+++ b/index-p4.html
@@ -16,40 +16,40 @@
 		<div class="columns">
 			<div class="column x">
 				<div class="checkIcon"><img id="check1" src="Assets/Fonts/check.png" alt="" ></div>
-				<img id="phaseOne1" src="Assets/Phase1/6.png" alt="" >
+				<img id="phaseOne1" src="Assets/Phase3/06.png" alt="" >
 			</div>
 			<div class="column x">
 				<div class="checkIcon"><img id="check2" src="Assets/Fonts/check.png" alt="" ></div>
-				<img id="phaseOne1" src="Assets/Phase1/5.png" alt="" >
+				<img id="phaseOne1" src="Assets/Phase3/05.png" alt="" >
 			</div>
 			<div class="column x">
 				<div class="checkIcon"><img id="check3" src="Assets/Fonts/check.png" alt="" ></div>
-				<img id="phaseOne1" src="Assets/Phase1/4.png" alt="" >
+				<img id="phaseOne1" src="Assets/Phase3/04.png" alt="" >
 			</div>
 			<div class="column x">
 				<div class="checkIcon"><img id="check4" src="Assets/Fonts/check.png" alt="" ></div>
-				<img id="phaseOne1" src="Assets/Phase1/3.png" alt="" >
+				<img id="phaseOne1" src="Assets/Phase3/03.png" alt="" >
 			</div>
 			<div class="column x">
 				<div class="checkIcon"><img id="check5" src="Assets/Fonts/check.png" alt="" ></div>
-				<img id="phaseOne1" src="Assets/Phase1/1.png" alt="" >
+				<img id="phaseOne1" src="Assets/Phase3/01.png" alt="" >
 			</div>
 			<div class="column x">
 				<div class="checkIcon"><img id="check6" src="Assets/Fonts/check.png" alt="" ></div>
-				<img id="phaseOne1" src="Assets/Phase1/2.png" alt="" >
+				<img id="phaseOne1" src="Assets/Phase3/02.png" alt="" >
 			</div>
 		</div>
 
 		<div class="navigationBtn">
-			<a href="index-p3.html" class="button">BACK</a>
-			<a href="index.html" class="button main">FINISH</a>
+			<a href="index-p3.html" class="button BGSlide">BACK</a>
+			<a href="index.html" class="button main BGSlide bMove">FINISH</a>
 		</div>
 
 		<div class="site">
 			<h3>
 				Site Map<br>
 			</h3>
-			<img id="phaseOne3" src="Assets/Phase3/Site.png" alt="">
+			<img id="test" src="Assets/Phase3/Site.png" alt="">
 		</div>
 	</div>
 		
