--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
-	<title>Fitting Room</title>
+	<title>Fitting Room</title>	
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<link rel="stylesheet" href="style.css" />
 	<script src="jquery-3.6.0.min.js"></script>	
@@ -9,17 +10,18 @@
 	<div class="container">
 		<div class="videos">
 			<video class="videox active" id="phaseOneV1" muted autoplay>
-				<source src="Assets/Phase1/CoverVideo.mp4" type="video/mp4" alt="">
+				<source src="Assets/Phase1/CoverVideo.mov" type="video/quicktime" alt="">
+				<source src="Assets/Phase1/CoverVideo.webm" type="video/webm" alt="">
 			</video>					
 		</div>	
 
 		<div class="navigationBtn">
-			<a href="index-p1.html" class="button main">START</a>
+			<a href="index-p1.html" class="button main BGSlide bMove">START</a>
 		</div>
 
 		<div class="text">
 			<p>
-				© Yucheng Huang 2022 All Rights Reserved<br>
+			© Yucheng Huang 2022 All Rights Reserved<br>
 			</p>
 		</div>
 	</div>
