Mobile Version Update
YCH

- modify for mobile version of page 0 + 4

--- a/index-p3.html
+++ b/index-p3.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 	<title>Fitting Room</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<link rel="stylesheet" href="style-p3.css" />
 	<script src="jquery-3.6.0.min.js"></script>	
