--- a/index.html
+++ b/index.html
@@ -20,8 +20,12 @@
 		</div>
 
 		<div class="text">
-			<p>
+			<p class="p1">
 			© Yucheng Huang 2022 All Rights Reserved<br>
+			</p>
+			<p class="p2">
+			© Yucheng Huang 2022<br>
+			All Rights Reserved<br>
 			</p>
 		</div>
 	</div>
