--- a/index-p4.html
+++ b/index-p4.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 	<title>Fitting Room</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<link rel="stylesheet" href="style-p4.css" />
 	<script src="jquery-3.6.0.min.js"></script>	
@@ -38,6 +39,13 @@
 				<div class="checkIcon"><img id="check6" src="Assets/Fonts/check.png" alt="" ></div>
 				<img id="phaseOne1" src="Assets/Phase3/02.png" alt="" >
 			</div>
+		</div>
+
+		<div class="text">			
+			<p class="p2">
+			© Yucheng Huang 2022<br>
+			All Rights Reserved<br>
+			</p>
 		</div>
 
 		<div class="navigationBtn">
