--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<title>Fitting Room</title>	
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
 	<link rel="stylesheet" href="style.css" />
 	<script src="jquery-3.6.0.min.js"></script>	
@@ -9,7 +9,7 @@
 <body>	
 	<div class="container">
 		<div class="videos">
-			<video class="videox active" id="phaseOneV1" muted autoplay>
+			<video class="videox active" id="phaseOneV1" muted autoplay playsinline>
 				<source src="Assets/Phase1/CoverVideo.mov" type="video/quicktime" alt="">
 				<source src="Assets/Phase1/CoverVideo.webm" type="video/webm" alt="">
 			</video>					
