--- a/index-p3.html
+++ b/index-p3.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<title>Fitting Room</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
 	<link rel="stylesheet" href="style-p3.css" />
 	<script src="jquery-3.6.0.min.js"></script>	
@@ -32,7 +32,7 @@
 			<!--video player start-->
 			<div class="videoPlayer">	
 				<div class="videos">
-					<video class="videox active autoVid" id="phaseOneV1" muted autoplay loop>
+					<video class="videox active autoVid" id="phaseOneV1" muted autoplay loop playsinline>
 						<source src="Assets/Phase3/01-1.mov" type="video/quicktime" alt="">
 						<source src="Assets/Phase3/01.webm" type="video/webm" alt="">
 					</video>
