--- a/index-p2.html
+++ b/index-p2.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<title>Fitting Room</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
 	<link rel="stylesheet" href="style-p2.css" />
 	<script src="jquery-3.6.0.min.js"></script>	
@@ -67,31 +67,31 @@
 			<!--video player start-->
 			<div class="videoPlayer">	
 				<div class="videos">
-					<video class="videox active" id="phaseOneV1" muted autoplay loop>
+					<video class="videox active" id="phaseOneV1" muted autoplay loop playsinline>
 						<source src="Assets/Phase2/01-1.mov" type="video/quicktime" alt="">
 						<source src="Assets/Phase2/01.webm" type="video/webm" alt="">
 					</video>
-					<video class="videox" id="phaseOneV2" loop>
+					<video class="videox" id="phaseOneV2" loop playsinline>
 						<source src="Assets/Phase2/02-1.mov" type="video/quicktime" alt="">
 						<source src="Assets/Phase2/02.webm" type="video/webm" alt="">
 					</video>
-					<video class="videox" id="phaseOneV3" loop>
+					<video class="videox" id="phaseOneV3" loop playsinline>
 						<source src="Assets/Phase2/03-1.mov" type="video/quicktime" alt="">
 						<source src="Assets/Phase2/03.webm" type="video/webm" alt="">
 					</video>
-					<video class="videox" id="phaseOneV4" loop>
+					<video class="videox" id="phaseOneV4" loop playsinline>
 						<source src="Assets/Phase2/04-1.mov" type="video/quicktime" alt="">
 						<source src="Assets/Phase2/04.webm" type="video/webm" alt="">
 					</video>
-					<video class="videox" id="phaseOneV5" loop>
+					<video class="videox" id="phaseOneV5" loop playsinline>
 						<source src="Assets/Phase2/05-1.mov" type="video/quicktime" alt="">
 						<source src="Assets/Phase2/05.webm" type="video/webm" alt="">
 					</video>
-					<video class="videox" id="phaseOneV6" loop>
+					<video class="videox" id="phaseOneV6" loop playsinline>
 						<source src="Assets/Phase2/06-1.mov" type="video/quicktime" alt="">
 						<source src="Assets/Phase2/06.webm" type="video/webm" alt="">
 					</video>
-					<video class="videox" id="phaseOneV7" loop>
+					<video class="videox" id="phaseOneV7" loop playsinline>
 						<source src="Assets/Phase2/07-1.mov" type="video/quicktime" alt="">
 						<source src="Assets/Phase2/07.webm" type="video/webm" alt="">
 					</video>
