--- a/index-p3.html
+++ b/index-p3.html
@@ -10,14 +10,14 @@
 	<div class="container">
 		<!--Simulation section start-->
 		<div class="simulationSection">
-			<div class="panelOne">
+			<div class="panelOne skip">
 				<div id="planelOneText">
 						<svg class="playIcon" id="play"><use href="#playIcon"></use></svg>
 						<svg class="playIcon" id="speedone"><use href="#playIcon SpeedOne"></use></svg>
 						<svg class="playIcon" id="speedtwo"><use href="#playIcon SpeedTwo"></use></svg>
 				</div>
 			</div>
-			<div class="panelTwo">
+			<div class="panelTwo skip">
 				<div id="planelTwoText">
 					<p class="description show" id="description-1">
 						Tailored Space<br>
@@ -49,27 +49,27 @@
 				<div class="slides" id="slides">						
 					<div class="slide x">
 						<div class="checkIcon"><img id="check1" src="Assets/Fonts/check.png" alt="" ></div>
-						<img class="imgHover" id="phaseOne1" src="Assets/Phase3/1.png" alt="" >
+						<img class="imgHover imgS" id="phaseOne1" src="Assets/Phase3/1.png" alt="" >
 					</div>
 					<div class="slide x">
 						<div class="checkIcon"><img id="check2" src="Assets/Fonts/check.png" alt="" ></div>
-						<img class="imgHover" src="Assets/Phase3/2.png" alt="">
+						<img class="imgHover imgS" src="Assets/Phase3/2.png" alt="">
 					</div>				
 					<div class="slide x">
 						<div class="checkIcon"><img id="check3" src="Assets/Fonts/check.png" alt="" ></div>
-						<img class="imgHover" src="Assets/Phase3/4.png" alt="">
+						<img class="imgHover imgS" src="Assets/Phase3/4.png" alt="">
 					</div>
 					<div class="slide x">
 						<div class="checkIcon"><img src="Assets/Fonts/check.png" alt="" ></div>
-						<img class="imgHover" src="Assets/Phase3/5.png" alt="">
+						<img class="imgHover imgS" src="Assets/Phase3/5.png" alt="">
 					</div>
 					<div class="slide x">
 						<div class="checkIcon"><img src="Assets/Fonts/check.png" alt="" ></div>
-						<img class="imgHover" src="Assets/Phase3/6.png" alt="">
+						<img class="imgHover imgS" src="Assets/Phase3/6.png" alt="">
 					</div>
 					<div class="slide x">
 						<div class="checkIcon"><img src="Assets/Fonts/check.png" alt="" ></div>
-						<img class="imgHover" src="Assets/Phase3/3.png" alt="">
+						<img class="imgHover imgS" src="Assets/Phase3/3.png" alt="">
 					</div>			
 				</div>		
 
@@ -87,25 +87,33 @@
 
 			<!--instruction start-->
 			<div class="instruction">
-				<div class="column">
+				<div class="column marginL">
 					<div class="step">1</div>
-					<h3>Arch-Element</h3>
-					<div class="pWrap"><p>Select one spatial element that meets your design envrionment.</p></div>
+					<h3 class="skip">Arch-Element</h3>
+					<div class="pWrap skip"><p>Select one spatial element that meets your design envrionment.</p></div>
 				</div>
 				<div class="column gap">></div>
 				<div class="column">
 					<div class="step">2</div>
-					<h3>Phygital Library</h3>
-					<div class="pWrap"><p>Select a set of physical and digital materials that helps your design progress.</p></div>
+					<h3 class="skip">Phygital Library</h3>
+					<div class="pWrap skip"><p>Select a set of physical and digital materials that helps your design progress.</p></div>
 				</div>
 				<div class="column gap">></div>
-				<div class="column long">
+				<div class="column marginR long">
 					<div class="step Active">3</div>
-					<h3>Tailor Environment</h3>
-					<div class="pWrap"><p>Apply those element choices to customize your design envrionment.</p></div>
+					<h3 class="skip">Tailor Environment</h3>
+					<div class="pWrap skip"><p>Apply those element choices to customize your design envrionment.</p></div>
 				</div>
 			</div>
 			<!--instruction end-->
+
+			<div class="moblieH3 marginL">
+				<h3>Tailored-<br> Environment</h3>
+			</div>
+
+			<div class="moblieP marginL2 marginR">
+				<p>Apply those element choices to customize your design envrionment.</p>
+			</div>
 
 			<!--navigation button start-->
 			<div class="navigationBtn">
