--- a/index-p4.html
+++ b/index-p4.html
@@ -10,6 +10,7 @@
 	<div class="container">
 		<div class="videos">
 			<video class="videox active autoVid2" id="phaseThreeV1" muted autoplay playsinline>
+				<source src="Assets/Phase3/FinalVideo.mov" type="video/quicktime" alt="">
 				<source src="Assets/Phase3/FinalVideo.webm" type="video/webm" alt="">
 			</video>					
 		</div>	
@@ -41,16 +42,25 @@
 			</div>
 		</div>
 
-		<div class="text">			
-			<p class="p2">
-			© Yucheng Huang 2022<br>
-			All Rights Reserved<br>
-			</p>
+		<div class="instruction step">
+			<img src="Assets/Fonts/check-toggle.png" alt="" >
 		</div>
+
+		<div class="instruction2">
+			<div class="moblieP marginL2">
+				<p class="step2">Arrange tailored-elements automatically to form the factory environment for seasonal productions.</p>
+			</div>
+
+			<div class="moblieH3 ">
+				<h3>Factory<br>Configuration</h3>
+			</div>
+		</div>
+
+		
 
 		<div class="navigationBtn">
 			<a href="index-p3.html" class="button BGSlide">BACK</a>
-			<a href="index.html" class="button main BGSlide bMove">FINISH</a>
+			<a href="index.html" class="button main BGSlide bMove">AGAIN ?</a>
 		</div>
 
 		<div class="site">
