--- a/index-p2.html
+++ b/index-p2.html
@@ -181,7 +181,7 @@
 			<!--navigation button start-->
 			<div class="navigationBtn">
 				<a href="index-p1.html" class="button BGSlide">BACK</a>
-				<a href="index-p3.html" class="button BGSlide">NEXT</a>
+				<a href="index-p3.html" class="button BGSlide limited" id="nextBtn">NEXT</a>
 			</div>
 			<!--navigation button end-->
 
