--- a/index-p3.html
+++ b/index-p3.html
@@ -53,23 +53,23 @@
 					</div>
 					<div class="slide x">
 						<div class="checkIcon"><img id="check2" src="Assets/Fonts/check.png" alt="" ></div>
-						<img class="imgHover imgS" src="Assets/Phase3/2.png" alt="">
+						<img class="imgHover imgS" id="phaseThree2" src="Assets/Phase3/2.png" alt="">
 					</div>				
 					<div class="slide x">
 						<div class="checkIcon"><img id="check3" src="Assets/Fonts/check.png" alt="" ></div>
-						<img class="imgHover imgS" src="Assets/Phase3/4.png" alt="">
+						<img class="imgHover imgS" id="phaseThree3" src="Assets/Phase3/4.png" alt="">
 					</div>
 					<div class="slide x">
-						<div class="checkIcon"><img src="Assets/Fonts/check.png" alt="" ></div>
-						<img class="imgHover imgS" src="Assets/Phase3/5.png" alt="">
+						<div class="checkIcon"><img id="check4" src="Assets/Fonts/check.png" alt="" ></div>
+						<img class="imgHover imgS" id="phaseThree4" src="Assets/Phase3/5.png" alt="">
 					</div>
 					<div class="slide x">
-						<div class="checkIcon"><img src="Assets/Fonts/check.png" alt="" ></div>
-						<img class="imgHover imgS" src="Assets/Phase3/6.png" alt="">
+						<div class="checkIcon"><img id="check5" src="Assets/Fonts/check.png" alt="" ></div>
+						<img class="imgHover imgS" id="phaseThree5" src="Assets/Phase3/6.png" alt="">
 					</div>
 					<div class="slide x">
-						<div class="checkIcon"><img src="Assets/Fonts/check.png" alt="" ></div>
-						<img class="imgHover imgS" src="Assets/Phase3/3.png" alt="">
+						<div class="checkIcon"><img id="check6" src="Assets/Fonts/check.png" alt="" ></div>
+						<img class="imgHover imgS" id="phaseThree6" src="Assets/Phase3/3.png" alt="">
 					</div>			
 				</div>		
 
@@ -118,7 +118,7 @@
 			<!--navigation button start-->
 			<div class="navigationBtn">
 				<a href="index-p2.html" class="button BGSlide">BACK</a>
-				<a href="index-p4.html" class="button BGSlide" id="comfirmBtn">CONFIGURE</a>
+				<a href="index-p4.html" class="button BGSlide limited" id="comfirmBtn">CONFIGURE</a>
 			</div>
 			<!--navigation button end-->
 
