--- a/index.html
+++ b/index.html
@@ -21,12 +21,45 @@
 
 		<div class="text">
 			<p class="p1">
-			© Yucheng Huang 2022 All Rights Reserved<br>
+			© Yu Cheng Huang 2022 All Rights Reserved<br>
 			</p>
 		</div>
 
 		<div class="moblieP marginL marginR">
-				<p>© Yucheng Huang 2022<br> All Rights Reserved</p>
+				<p>© Yu Cheng Huang 2022<br> All Rights Reserved</p>
+			</div>
+		</div>
+
+		<div class="info">
+			<img id="check-info" src="Assets/Fonts/info.png" alt="" >			
+		</div>
+
+		<div class="info2 description" id="info2">			
+			<div id="planelTwoText">
+				<p class="align" id="description-1">
+					<span class="h3">Fitting Room</span><br>
+					<br>					
+					Nowadays, fashion factories are alike other factories designed by the idea of linear economics (efficiency and profit maxima). However, there are problems without thinking of the nature of a fashion industry, which leads to a bad process of design creation.<br>
+					<br>
+					The goal of this project is to design a real-time visualization in augmented reality, which allows fashion designers to use mobile phones or AR glasses to customize their working space as well as visualize their final works in the interest of design decision-making.
+				</p>
+			</div>
+		</div>
+
+		<div class="info3 description" id="info3">			
+			<div id="planelTwoText">
+				<p class="align description show" id="description-1">
+					<span class="pb">- Credit -</span><br>
+					<br>	
+					<span class="pb">Project Designer </span><br>
+					Austin Lightle, Yu Cheng Huang<br>
+					<span class="pb">Project Instructor </span><br>
+					Peter Testa, Nero He<br><br>
+					<span class="pb">Web Developer</span><br>
+					Yu Cheng Huang<br>
+					<span class="pb">Web Development Instructor</span><br>		
+					Anthony Tran<br>
+				</p>
 			</div>
 		</div>
 		
