--- a/index-p3.html
+++ b/index-p3.html
@@ -80,6 +80,10 @@
 						<div id="selector">
 							<div class="selectBtn"></div>
 						</div>
+
+						<div class="autoText">
+							<p class="autoP">(Automatically apply elements from the phygital library for demostration.)</p>
+						</div>
 					</div>
 				</div>		
 			</div>	
