--- a/index-p4.html
+++ b/index-p4.html
@@ -68,7 +68,24 @@
 				Site Map<br>
 			</h3>
 			<img id="test" src="Assets/Phase3/Site.png" alt="">
+			<div class="siteText skip">
+				<p class="stepx">
+					The site is in the Italian region of Arezzo and offers footprint 50,000sqm. Challenging the idea of a conventional factory, the new factory houses multiple and customized spatial types.
+				</p>
+			</div>
+
+			<div class="siteText2">
+				<p class="stepx2">
+					(Automatically arrange customized spatial elements for demostration.)
+				</p>
+			</div>
 		</div>
+	</div>
+
+	<div class="siteText3">
+		<p class="stepx3 step3">
+			(Automatically arrange customized spatial elements for demostration.)
+		</p>
 	</div>
 		
 	<script src="script.js"></script>
