--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 			<img id="check-info" src="Assets/Fonts/info.png" alt="" >			
 		</div>
 
-		<div class="info2 description" id="info2">			
-			<div id="planelTwoText">
+		<div class="coverInfo">
+			<div class="info2 description" id="info2">	
 				<p class="align" id="description-1">
 					<span class="h3">Fitting Room</span><br>
 					<br>					
@@ -44,24 +44,22 @@
 					The goal of this project is to design a real-time visualization in augmented reality, which allows fashion designers to use mobile phones or AR glasses to customize their working space as well as visualize their final works in the interest of design decision-making.
 				</p>
 			</div>
-		</div>
 
-		<div class="info3 description" id="info3">			
-			<div id="planelTwoText">
-				<p class="align description show" id="description-1">
+			<div class="info3 description" id="info3">	
+				<p class="align2 description show" id="description-1">
 					<span class="pb">- Credit -</span><br>
 					<br>	
 					<span class="pb">Project Designer </span><br>
-					Austin Lightle, Yu Cheng Huang<br>
+					Yu Cheng Huang, Austin Lightle<br>
 					<span class="pb">Project Instructor </span><br>
-					Peter Testa, Nero He<br><br>
-					<span class="pb">Web Developer</span><br>
+					Peter Testa, Nero He (AT)<br><br>
+					<span class="pb">Website Developer</span><br>
 					Yu Cheng Huang<br>
-					<span class="pb">Web Development Instructor</span><br>		
+					<span class="pb">Website Adviser</span><br>	
 					Anthony Tran<br>
 				</p>
 			</div>
-		</div>
+		</div>		
 		
 	<script src="script.js"></script>
 </body>
